2011-01-27  Per Bothner  <per@bothner.com>

	* XQuery.java: Update to use new Declaration#noteValueUnknown.
	* XQParser.java: Likewise.

2010-11-26  Per Bothner  <per@bothner.com>

	* XQParser.java: Update, since Symbol constructor is now protected.

2010-05-24  Per Bothner  <per@bothner.com>

	* XQParser.java (getDelimited): Use new Lexer.getDelimited.

2010-05-19  Per Bothner  <per@bothner.com>

	* XQParser.java: Update Namespace.getInstance -> valueOf.
	* XQuery: Likewise.

2010-04-18  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkReferenceExp): Change to match changes
	in gnu.kawa.servlet.

2010-02-28  Per Bothner  <per@bothner.com>

	* XQParser.java (parseFLWRExpression): Do pushNesting/popNesting
	in 'order by' clause, to fix parsing in REPL.
	Fixes bug reported by Karl Krukow.

2010-02-21  Per Bothner  <per@bothner.com>

	* XQParser.java: Update since ModuleInfo's className method
	is now private.

2009-09-15  Per Bothner  <per@bothner.com>

	* XQuery.java (registerEnvironment): Set flag so
	ApplicationMainSupport.processSetProperties will get called.
	This fixes check-multab in ../testsuite.

2009-08-23  Per Bothner  <per@bothner.com>

	* XQParser.java: Update for Convert.makeCoercion moved to Compilation,
	and Convert.setCoercedReturnValue moved to LambdaExp.

2009-08-13  Per Bothner  <per@bothner.com>

	* XQResolveNames.java: Update GetNamedPart -> CompileNamedPart.

2009-07-14  Per Bothner  <per@bothner.com>

	* XQParser.java (parseMaybePrimaryExpr): Call maybeSetLine on new
	ReferenceExp created from $VARREF.

	* XQParser.java (maybeSetLine): Don't set if QuoteExp.

2009-05-17  Per Bothner  <per@bothner.com>

	* XQueryScriptEngineFactory.java: New class.
	* Makefile.am: Update accordingly.

2009-03-13  Per Bothner  <per@bothner.com>

	* XQParser.java (parse): Update calls to require.importDefinitions.

2009-03-01  Per Bothner  <per@bothner.com>

	* XQParser.java (getStaticBaseUri): Tolerate getPort() being null.