@@ -1,3 +1,8 @@
+2011-03-16  Per Bothner  <per@bothner.com>
+
+	* XQResolveNames.java (visitApplyExp): Remove setting of
+	incorrect return type for COLLECTION_BUILTIN.
+
 2011-01-27  Per Bothner  <per@bothner.com>
 
 	* XQuery.java: Update to use new Declaration#noteValueUnknown.
